@@ -13,6 +13,9 @@ Enhancements:
 Fixes:
 	Adding a graph to a digraph now works (Issue 39).
 
+Important API Changes:
+	Removed traversal() method from graph and digraph classes.
+
 
 Release 1.6.2	[Sep 30, 2009]
 
